Added ask password

--- a/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/lang/en_US.properties
+++ b/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/lang/en_US.properties
@@ -57,3 +57,7 @@ profile.updated=Your profile is updated.
 invalid.profile.name=Invalid profile name.
 profile.image.loaded=Profile image is loaded
 account.locked=Account is locked till user verify.
+users.email.address=Enter user's email address
+confirm.users.email.address=Confirm email address
+retype.placeholder.email=Re-type email address
+users.add.placeholder.email=Email address of the user
