Fixing internationalization issues

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
@@ -169,6 +169,6 @@ code=Code
 back.sign.in=Back to sign in
 recover.username=Recover Username
 fill.below.to.recover=Please fill in the below form to recover your username
-password.history.validation.error.1000=Password you entered has already been used in last N attempts"
-password.history.validation.error.1001=Password you entered has already been used in last N days"
+password.history.validation.error.1000=Password you entered has already been used in last {0} attempts"
+password.history.validation.error.1001=Password you entered has already been used in last {0} days"
 password.update.success=You have successfully updated the password
