Revert "Merge branch 'M5-UI-Tests' of https://github.com/GDRDABARERA/product-is into M5-Story5986"
This reverts commit dc3e5c5c012c5056d9f3f9765851a37de249b412, reversing
changes made to 2e763fb42a2f967e4a00afa1ebfc6b8e36cfd2f4.

--- a/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
+++ b/portal/apps/org.wso2.carbon.iam.user-portal.app/src/main/lang/en_US.properties
@@ -129,7 +129,7 @@ password.recovery.select.options=Please select a method to recover your password
 password.recovery.with.email=Recover with e-mail
 username.recovery.for=Recover Username for
 username.recovery.error=Username Recovery Error!
-username.error.invalid.username=Sorry!. No Such Unique User found with the provided information!
+username.error.invalid.username=Sorry!. No Such User Available!
 captcha=Captcha:
 recover=Recover
 cancel=Cancel
