Resolved PR comments

--- a/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/lang/en_US.properties
+++ b/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/lang/en_US.properties
@@ -109,3 +109,4 @@ users.email.address=Enter user's email address
 confirm.users.email.address=Confirm email address
 retype.placeholder.email=Re-type email address
 users.add.placeholder.email=Email address of the user
+sample.email.address=retype - example@mail.com
