--- a/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/lang/en_US.properties
+++ b/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/lang/en_US.properties
@@ -32,9 +32,14 @@ users.add.select.with.otp.and.askPassword=With OTP and ask password from user
 users.add.select.with.email.or.phone=With email/phone verification
 users.add.password=Password
 users.confirm.password=Confirm Password
-recovery.reset.password=Reset Password
-recovery.reset.selectMethod=Select password reset method
-recovery.reset.select.with.offline.passcode=Via Offline Pass Code
-recovery.reset.select.with.email.OTP=Via Email OTP
-recovery.reset.select.with.reset.link=Via Reset Link
-recovery.reset.password.new=New password
+reset.select.method=Select password reset method
+reset.select.with.offline.passcode=Offline Pass Code
+reset.select.with.email.OTP=Email OTP
+reset.select.with.reset.link=Reset Link
+reset.offline.passcode.description=Admin initiated password reset via offline passcode
+reset.email.otp.description=Admin initiated password reset via Email OTP
+reset.reset.link.description=Admin initiated password reset via Reset Link
+password.reset.success=Success!
+password.reset.failure=Failure!
+reset.generate=Generate
+
