Add group end to end flow works.

--- a/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/lang/en_US.properties
+++ b/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/lang/en_US.properties
@@ -67,6 +67,7 @@ update.header=Update User
 user.profile.update.error=Error occured when updating user profile
 save=Save
 update=Update
+cancel=Cancel
 profile.success=Successfully updated the profile!
 profile.failure=An Error occured when updating the profile!
 profile.updated=Your profile is updated.
@@ -81,27 +82,34 @@ list.error.retrieve.profile=Failed to retrieve claim profile.
 list.action.failure=Failure!
 list.action.info=Info!
 zero.results.list=No matching records were found for the claim value
-user.add.error=Error while adding user.
-user.add.exist.error.message=Username is already taken. Please use a different name.
-user.add.failure=Failure!
-user.add.success.message=You have Succesfully added the user
-user.add.success=Success!
-user.add.error.retrieve.domain=Failed to retrieve the domain names.
-user.add.error.retrieve.primary.domain=Failed to retrieve the primary domain name.
-user.add.password.validate.error=Invalid Password.Please adhere to the password policy guidelines
-recovery.reset.password=Reset Password
-recovery.reset.selectMethod=Select password reset method
-recovery.reset.select.with.offline.passcode=Via Offline Pass Code
-recovery.reset.select.with.email.OTP=Via Email OTP
-recovery.reset.select.with.reset.link=Via Reset Link
-recovery.reset.password.new=New password
-update.header=Update User
-user.profile.update.error=Error occured when updating user profile
-save=Save
-update=Update
-profile.success=Successfully updated the profile!
-profile.failure=An Error occured when updating the profile!
-profile.updated=Your profile is updated.
-invalid.profile.name=Invalid profile name.
-profile.image.loaded=Profile image is loaded
-account.locked=Account is locked till user verify.
+groups.add.header=Add Group
+groups.edit.header=Edit Group
+group.edit.button=Update
+group.added.successfully.default=Group added successfully.
+group.updated.successfully.default=Group updated successfully.
+group.update.error.default=Error occurred while updating group.
+go.back=Go Back
+identity.store=Identity Store
+groups.name=Name
+groups.description=Description
+groups.add.button=Add Group
+group.error.retrieve.claim=Claim retrieval error for claims.
+group.add.no.content=No claim available for group.
+groups.add.domain=Identity Store
+group.claim.groupname=Group Name
+group.claim.groupdescription=Group Description
+group.placeholder.groupname=Name of the Group
+group.placeholder.groupdescription=Describe the intention of the group.
+group.add.error=Error while adding group.
+group.edit.error=Error while editing group.
+groups.general.details=General Details
+assign.users=Assign Users
+assign.roles=Assign Roles
+groups.users=Users
+groups.roles=Roles
+group.add.exist.error.message=Group name is already taken. Please use a different name.
+group.add.error.default=Group Adding Error!
+group.update.error=Error occurred updating the group.
+users.list.Groups=Groups
+user.update.error=Error while updating user.
+group.error.retrieve.domain=Error occurred retrieving domain.
