Adding success/danger alerts

--- a/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/lang/en_US.properties
+++ b/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/lang/en_US.properties
@@ -42,4 +42,6 @@ reset.reset.link.description=Admin initiated password reset via Reset Link
 password.reset.success=Success!
 password.reset.failure=Failure!
 reset.generate=Generate
+error.while.persisting=Error while persisting the passcode
+successfully.persisted=Successfully persisted the passcode
 
