Resolved PR comments

--- a/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/lang/en_US.properties
+++ b/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/lang/en_US.properties
@@ -57,12 +57,6 @@ bulk.action.edit=Edit
 bulk.action.confirm=You are about to perform a bulk operation, please confirm to proceed.
 bulk.action.save=Save Changes
 group.modal.heading=Groups of
-recovery.reset.password=Reset Password
-recovery.reset.selectMethod=Select password reset method
-recovery.reset.select.with.offline.passcode=Via Offline Pass Code
-recovery.reset.select.with.email.OTP=Via Email OTP
-recovery.reset.select.with.reset.link=Via Reset Link
-recovery.reset.password.new=New password
 update.header=Update User
 user.profile.update.error=Error occured when updating user profile
 save=Save
@@ -95,18 +89,12 @@ recovery.reset.select.with.offline.passcode=Via Offline Pass Code
 recovery.reset.select.with.email.OTP=Via Email OTP
 recovery.reset.select.with.reset.link=Via Reset Link
 recovery.reset.password.new=New password
-update.header=Update User
-user.profile.update.error=Error occured when updating user profile
 save=Save
 update=Update
-profile.success=Successfully updated the profile!
 profile.failure=An Error occured when updating the profile!
 profile.updated=Your profile is updated.
-invalid.profile.name=Invalid profile name.
 profile.image.loaded=Profile image is loaded
 account.locked=Account is locked till user verify.
 users.email.address=Enter user's email address
-confirm.users.email.address=Confirm email address
-retype.placeholder.email=Re-type email address
-users.add.placeholder.email=Email address of the user
-sample.email.address=example@email.com
+users.email.address.confirm=Confirm email address
+users.email.address.sample=example@email.com
