Adapt accordian view to edit UI too.

--- a/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/lang/en_US.properties
+++ b/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/lang/en_US.properties
@@ -13,7 +13,7 @@ login.error.empty.authentication=Please provide a user name and a password for l
 username=Username
 password=Password
 applications.breadcrumb=Home
-applications.header = Applications
+applications.header=Applications
 no-applications.header=No Applications Found!
 no-applications.body=There are no applications registered for you.
 applications.users.header=Users
@@ -87,12 +87,13 @@ groups.edit.header=Edit Group
 group.edit.button=Update
 group.added.successfully.default=Group added successfully.
 group.updated.successfully.default=Group updated successfully.
-group.update.error.default=Error occurred while updating group.
+group.edit.error.default=Error occurred while updating group!
 go.back=Go Back
 identity.store=Identity Store
 groups.name=Name
 groups.description=Description
 groups.add.button=Add Group
+groups.update.button=Update Group
 group.error.retrieve.claim=Claim retrieval error for claims.
 group.add.no.content=No claim available for group.
 groups.add.domain=Identity Store
