Adding add group UI fixes

--- a/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/lang/en_US.properties
+++ b/portal/apps/org.wso2.carbon.iam.admin-portal.app/src/main/lang/en_US.properties
@@ -19,9 +19,10 @@ no-applications.body=There are no applications registered for you.
 applications.users.header=Users
 no-users.header=No users created yet.
 no-users.body=Click one of the buttons below to get started.
+no-users.added.body = Click on the button below to add users.
 applications.groups.header=Groups
 no-groups.header=No groups created yet.
-no-groups.body=Click one of the buttons below to get started.
+no-groups.body=Click on the button below to get started.
 users.add.header=Add User
 users.add.domain=Domain
 users.add.username=Username
@@ -106,6 +107,7 @@ group.edit.error=Error while editing group.
 groups.general.details=General Details
 assign.users=Assign Users
 assign.roles=Assign Roles
+add.users=Add Users
 groups.users=Users
 groups.roles=Roles
 group.add.exist.error.message=Group name is already taken. Please use a different name.
@@ -114,6 +116,7 @@ group.update.error=Error occurred updating the group.
 users.list.Groups=Groups
 user.update.error=Error while updating user.
 group.error.retrieve.domain=Error occurred retrieving domain.
+no.assigned.users = No users added yet.
 reset.select.method=Select password reset method
 reset.select.with.offline.passcode=Offline Pass Code
 reset.select.with.email.OTP=Email OTP
